--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,9 @@
+---
+import '../styles/global.css'
+import "../styles/tailwind.css";
+---
+
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -18,5 +24,7 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		background: #0e2d69;
+		color: #122244;
 	}
 </style>
